# parquetpad

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DUCKDB.md  HYBRID.md  HYBRIDDESIGN.md  LICENSE  MAJOR_DECISIONS.md  README.md  SORT_AND_FILTER.md  conanfile.py  vcpkg.json  version.h.in
src/: AboutDialog.cpp  AboutDialog.h  ArrowBackend.cpp  ArrowBackend.h  FileInfoDialog.cpp  FileInfoDialog.h  IDataProvider.h  MainWindow.cpp  MainWindow.h  ParquetTableModel.cpp  ParquetTableModel.h  Query.h  main.cpp  parquetpad.rc  resources.qrc
